feat(tasks): crud
