# internal/api/tasks/impl.go
@@ -26,6 +26,27 @@ func (Server) GetTasks(ctx *gin.Context) {
 	ctx.JSON(http.StatusOK, taskStore.List())
 }
 
+// (GET /tasks/{id})
+// @Summary Get a task by ID
+// @Param id path string true "Task ID"
+// @Success 200 {object} Task
+// @Failure 404
+// @Router /tasks/{id} [get]
+func (Server) GetTasksId(ctx *gin.Context, id string) {
+	if id == "" {
+		ctx.JSON(http.StatusBadRequest, gin.H{"error": "id is required"})
+		return
+	}
+
+	task, ok := taskStore.Get(id)
+	if !ok {
+		ctx.JSON(http.StatusNotFound, gin.H{"error": "task not found"})
+		return
+	}
+
+	ctx.JSON(http.StatusOK, task)
+}
+
 // @Summary Create a new task
 // @Accept json
 // @Produce json
@@ -69,4 +90,37 @@ func (Server) DeleteTasksId(ctx *gin.Context, id string) {
 	taskStore.Delete(id)
 
 	ctx.JSON(http.StatusNoContent, nil)
+}
+
+// @Summary Update a task
+// @Param id path string true "Task ID"
+// @Param task body TaskPatch true "TaskPatch"
+// @Success 200 {object} Task
+// @Failure 404
+// @Router /tasks/{id} [patch]
+func (Server) PatchTasksId(ctx *gin.Context, id string) {
+	if id == "" {
+		ctx.JSON(http.StatusBadRequest, gin.H{"error": "id is required"})
+		return
+	}
+
+	task, ok := taskStore.Get(id)
+	if !ok {
+		ctx.JSON(http.StatusNotFound, gin.H{"error": "task not found"})
+		return
+	}
+
+	var taskPatch TaskPatch
+	if err := ctx.ShouldBindJSON(&taskPatch); err != nil {
+		ctx.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+
+	if taskPatch.Completed != nil {
+		task.Completed = taskPatch.Completed
+	}
+
+	taskStore.tasks[id] = task
+
+	ctx.JSON(http.StatusOK, task)
 }
