# internal/docs/swagger.yaml
@@ -13,6 +13,11 @@ definitions:
       title:
         type: string
     type: object
+  api.TaskPatch:
+    properties:
+      completed:
+        type: boolean
+    type: object
 info:
   contact: {}
 paths:
@@ -60,4 +65,40 @@ paths:
         "404":
           description: Not Found
       summary: Delete a task
+    get:
+      parameters:
+      - description: Task ID
+        in: path
+        name: id
+        required: true
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.Task'
+        "404":
+          description: Not Found
+      summary: Get a task by ID
+    patch:
+      parameters:
+      - description: Task ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: TaskPatch
+        in: body
+        name: task
+        required: true
+        schema:
+          $ref: '#/definitions/api.TaskPatch'
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.Task'
+        "404":
+          description: Not Found
+      summary: Update a task
 swagger: "2.0"
